fix(blog): gaps fixes

--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -10,7 +10,7 @@
   &__main {
     display: flex;
     flex-direction: column;
-    gap: rem(24);
+    gap: rem(28);
   }
 
   &__pagination {
